# payerr

./: .env  .gitignore  Cargo.toml  Dockerfile  fly.toml
frontend/: .env.local.example  README.md  README.md:Zone.Identifier  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/invoice/[id]/: page.tsx
frontend/app/invoices/: page.tsx
frontend/components/: InvoiceForm.tsx  QRCard.tsx  WalletCtx.tsx
frontend/lib/: api.ts
src/: link_scrp.rs  main.rs  models.rs
