[package]
name = "solana_pay_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
axum = "0.7"
bs58 = "0.5"
rand = "0.8"
rust_decimal = { version = "1.35", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
qrcode = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }